<resources>
    <string name="app_name">Halodoc</string>
    <string name="lihat_artikel">Artikel</string>
    <string name="Halodoc"><b>Halodoc</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  Start Sherly  -->
    <string name="dr_febbyola_ramanda">dr. Febbyola Ramanda</string>
    <string name="_99_0">99.0 %</string>
    <string name="rp_10_000">Rp 10.000</string>
    <string name="dokter_umum">Dokter Umum</string>
    <string name="_5_tahun">5 Tahun</string>
    <string name="harga_layanan">harga layanan</string>
    <string name="harga_medis">harga medis</string>
    <string name="harga_pembayaran">Rp100.000</string>
    <string name="total_pembayaran">Rp.0</string>
    <string name="txt_btn_buatjanji">Buat Janji</string>
    <string name="topik_artikel">Topik artikel</string>
    <string name="nama_rumah_sakit">Nama Rumah sakit</string>
    <string name="list_namalay">Nama layanan</string>
    <string name="layanan_name">layanan</string>
    <string name="txt_pilihpasien">Pilih Pasien</string>
    <string name="nama_layanan_rs">RS Nama Layanan</string>
    <string name="dropdown">dropdown</string>
    <string name="txt_bayar">Rp 415.000</string>
    <string name="totalbayar_tokes">Rp 415.000</string>
    <string name="gambar_tambah">gambar_tambah</string>
    <string name="bayar_tokes">Bayar</string>
    <string name="judul_spesialisasi">Judul</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="text_nama_lengkap">Nama Lengkap</string>
    <string name="penjelasan_notel">*silahkan masukan nomor telepon*</string>
    <string name="jenis_layanan">Jenis</string>
    <string name="icon_profil">icon_profil</string>
    <string name="nama_login">Masuk/Daftar</string>
    <string name="bayar_dokter">Rp 25.000</string>
    <string name="ringkas_bayar_dokter">Bayar</string>
    <string name="jumlah_obat">+</string>
    <string name="kurangi_obat">-</string>
    <string name="nama_paket">nama paket</string>
    <string name="radiobutton_pasien">radio_pasien</string>
    <string name="radiobutton_keluarga">radio_keluarga</string>
    <string name="pengiriman_instant">instant</string>
    <string name="pengiriman_reg">reguler</string>
    <string name="topik_corona">Coronavirus</string>
    <string name="topik_parestesia">Parestesia</string>
    <string name="topik">Topik</string>
    <string name="artikel_semua">Semua</string>
    <string name="artikel_kecantikan">Kecantikan</string>
    <!-- End Sherly  -->
</resources>