<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Lihat_semua_artikel">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:id="@+id/but_01"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/stroke"
                android:text="@string/artikel_semua"
                android:contentDescription="@string/artikel_semua"
                android:onClick="Button1"
                android:textAllCaps="false"
                android:textColor="@color/background_all"></Button>

            <Button
                android:id="@+id/but_02"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/artikel_kecantikan"
                android:contentDescription="@string/artikel_kecantikan"
                android:onClick="Button2"
                android:textAllCaps="false"
                android:background="@drawable/stroke"
                android:textColor="@color/background_all"></Button>
            <Button
                android:id="@+id/but_06"
                android:layout_width="140dp"
                android:onClick="Button6"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/stroke"
                android:text="Pertumbuhan Bayi"
                android:textAllCaps="false"
                android:textColor="@color/background_all"></Button>



        </LinearLayout>

    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"

        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/but_04"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/stroke"
            android:text="Sakit Kepala"
            android:textAllCaps="false"
            android:onClick="Button4"
            android:textColor="@color/background_all">

        </Button>

        <Button
            android:id="@+id/but_05"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/stroke"
            android:text="@string/topik_parestesia"
            android:contentDescription="@string/topik_parestesia"
            android:onClick="Button5"
            android:textAllCaps="false"
            android:textColor="@color/background_all"></Button>
        <Button
            android:id="@+id/but_03"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/stroke"
            android:text="@string/topik_corona"
            android:onClick="Button3"
            android:textAllCaps="false"
            android:contentDescription="@string/topik_corona"
            android:textColor="@color/background_all">

        </Button>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_artikel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        ></androidx.recyclerview.widget.RecyclerView>
</LinearLayout>