<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_dokter"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#FFFFFF"
        android:outlineAmbientShadowColor="#424242"
        android:outlineSpotShadowColor="#424242">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_dokter"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/avadoctor1"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nama_dokter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/googlesansmedium"
                    android:text="@string/dr_febbyola_ramanda"
                    android:textColor="@color/judul"
                    android:textSize="16sp"
                    android:textStyle="bold">
                </TextView>


                <TextView
                    android:id="@+id/kategori_dokter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/dokter_umum"
                    android:textColor="@color/deskripsi"
                    android:textSize="14sp"></TextView>

                <LinearLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/label_blue"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/ikonkerja"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="4dp"
                            android:src="@drawable/ic_baseline_work_24" />

                        <TextView
                            android:id="@+id/tahun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:lineSpacingExtra="7sp"
                            android:text="@string/_5_tahun"
                            android:textColor="@color/judul"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/label_blue"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/persen"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:src="@drawable/ic_baseline_thumb_up_24" />

                        <TextView
                            android:id="@+id/suka"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:lineSpacingExtra="7sp"
                            android:text="@string/_99_0"
                            android:textColor="@color/judul"
                            android:textSize="13sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/divider_list"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/divider_card_dokter"
                    android:orientation="horizontal">
                </LinearLayout>

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/googlesansmedium"
                    android:text="@string/rp_10_000"
                    android:textColor="#595959"
                    android:textSize="14sp">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
